# pelican-katex

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: auto-publish.yml  ci.yml  update-katex.yml
pelican_katex/: CHANGELOG.md  __init__.py  compile-katex.js  katex.0.16.40.js  markdown.py  plugin.py  render-katex.js  rendering.py  rendering_katex.py  rendering_mathml.py  restructuredtext.py
scripts/: update_katex.py
test/: conftest.py  html_template.py  test_markdown.py  test_rendering.py  test_update_katex.py
